feat: Implement payment processing module