@@ -15,6 +15,13 @@ import com.store.shoppingcart.orders.domain.exception.InvalidQuantityException;
 import com.store.shoppingcart.orders.domain.exception.OrderItemNotFoundException;
 import com.store.shoppingcart.orders.domain.exception.OrderNotFoundException;
 import com.store.shoppingcart.orders.domain.exception.OrderNotModifiableException;
+import com.store.shoppingcart.payments.domain.exception.InvalidCardException;
+import com.store.shoppingcart.payments.domain.exception.InvalidPaymentDataException;
+import com.store.shoppingcart.payments.domain.exception.OrderNotPayableException;
+import com.store.shoppingcart.payments.domain.exception.PaymentFailedException;
+import com.store.shoppingcart.payments.domain.exception.PaymentNotFoundException;
+import com.store.shoppingcart.payments.domain.exception.PaymentNotRefundableException;
+import com.store.shoppingcart.payments.domain.exception.UnsupportedPaymentMethodException;
 import com.store.shoppingcart.products.domain.exception.ExternalServiceException;
 import com.store.shoppingcart.products.domain.exception.InvalidProductDataException;
 import com.store.shoppingcart.products.domain.exception.ProductNotFoundException;
@@ -31,7 +38,6 @@ import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
@@ -114,7 +120,7 @@ public class GlobalExceptionHandler {
     @ExceptionHandler({InvalidOrderStateException.class, EmptyOrderException.class, ClientNotActiveException.class,
                       OrderNotModifiableException.class, InvalidQuantityException.class})
     public ResponseEntity<ApiResponse<Object>> handleOrderValidation(RuntimeException ex) {
-        ErrorResponse error = new ErrorResponse(ex.getMessage());
+        ErrorResponse error = new ErrorResponse("Validación de pedido fallida: " + ex.getMessage());
         return ResponseEntity
             .status(HttpStatus.BAD_REQUEST)
             .body(ApiResponse.error(HttpStatus.BAD_REQUEST.value(), error));
@@ -128,6 +134,33 @@ public class GlobalExceptionHandler {
             .body(ApiResponse.error(HttpStatus.NOT_FOUND.value(), error));
     }
     
+    // Payment exceptions
+    @ExceptionHandler(PaymentNotFoundException.class)
+    public ResponseEntity<ApiResponse<Object>> handlePaymentNotFound(PaymentNotFoundException ex) {
+        ErrorResponse error = new ErrorResponse(ex.getMessage());
+        return ResponseEntity
+            .status(HttpStatus.NOT_FOUND)
+            .body(ApiResponse.error(HttpStatus.NOT_FOUND.value(), error));
+    }
+    
+    @ExceptionHandler({InvalidCardException.class, InvalidPaymentDataException.class, 
+                      UnsupportedPaymentMethodException.class, OrderNotPayableException.class,
+                      PaymentNotRefundableException.class})
+    public ResponseEntity<ApiResponse<Object>> handlePaymentValidation(RuntimeException ex) {
+        ErrorResponse error = new ErrorResponse("Datos de pago inválidos: " + ex.getMessage());
+        return ResponseEntity
+            .status(HttpStatus.BAD_REQUEST)
+            .body(ApiResponse.error(HttpStatus.BAD_REQUEST.value(), error));
+    }
+    
+    @ExceptionHandler(PaymentFailedException.class)
+    public ResponseEntity<ApiResponse<Object>> handlePaymentFailed(PaymentFailedException ex) {
+        ErrorResponse error = new ErrorResponse(ex.getMessage());
+        return ResponseEntity
+            .status(HttpStatus.PAYMENT_REQUIRED)
+            .body(ApiResponse.error(HttpStatus.PAYMENT_REQUIRED.value(), error));
+    }
+    
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<ApiResponse<Object>> handleValidationErrors(MethodArgumentNotValidException ex) {
         List<String> details = ex.getBindingResult()
@@ -138,7 +171,7 @@ public class GlobalExceptionHandler {
                 String message = error.getDefaultMessage();
                 return fieldName + ": " + message;
             })
-            .collect(Collectors.toList());
+            .toList();
         
         ErrorResponse error = new ErrorResponse("Validación fallida", details);
         return ResponseEntity
